--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>PDF to Anything Toolkit</title>
   <script src="https://unpkg.com/pdf-lib/dist/pdf-lib.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.12.313/pdf.min.js"></script>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; padding: 20px; background: #f4f4f4; }
     h1 { margin-bottom: 20px; }
@@ -33,43 +34,21 @@
   <button onclick="splitPDF()">Split and Download</button>
 </div>
 
+<div class="tool">
+  <h2>Compress PDF</h2>
+  <input type="file" id="compressFile" accept="application/pdf">
+  <br>
+  <button onclick="compressPDF()">Compress and Download</button>
+</div>
+
+<div class="tool">
+  <h2>Convert PDF to Images (JPG)</h2>
+  <input type="file" id="pdfToImgFile" accept="application/pdf">
+  <br>
+  <button onclick="pdfToImages()">Convert & Download</button>
+</div>
+
 <script>
-async function mergePDFs() {
-  const files = document.getElementById('mergeFiles').files;
-  if (files.length < 2) return alert('Select at least 2 PDFs to merge');
-
-  const mergedPdf = await PDFLib.PDFDocument.create();
-
-  for (let file of files) {
-    const arrayBuffer = await file.arrayBuffer();
-    const pdf = await PDFLib.PDFDocument.load(arrayBuffer);
-    const copiedPages = await mergedPdf.copyPages(pdf, pdf.getPageIndices());
-    copiedPages.forEach((page) => mergedPdf.addPage(page));
-  }
-
-  const mergedBytes = await mergedPdf.save();
-  download(mergedBytes, 'merged.pdf');
-}
-
-async function splitPDF() {
-  const file = document.getElementById('splitFile').files[0];
-  const range = document.getElementById('pageRange').value;
-  if (!file || !range) return alert('Select a PDF and enter a page range');
-
-  const arrayBuffer = await file.arrayBuffer();
-  const pdf = await PDFLib.PDFDocument.load(arrayBuffer);
-  const newPdf = await PDFLib.PDFDocument.create();
-
-  let [start, end] = range.split('-').map(n => parseInt(n) - 1);
-  if (isNaN(start) || isNaN(end)) return alert('Invalid page range format');
-
-  const copiedPages = await newPdf.copyPages(pdf, Array.from({length: end - start + 1}, (_, i) => start + i));
-  copiedPages.forEach((page) => newPdf.addPage(page));
-
-  const splitBytes = await newPdf.save();
-  download(splitBytes, 'split.pdf');
-}
-
 function download(bytes, filename) {
   const blob = new Blob([bytes], { type: 'application/pdf' });
   const url = URL.createObjectURL(blob);
@@ -81,7 +60,79 @@ function download(bytes, filename) {
   URL.revokeObjectURL(url);
   a.remove();
 }
+
+async function mergePDFs() {
+  const files = document.getElementById('mergeFiles').files;
+  if (files.length < 2) return alert('Select at least 2 PDFs to merge');
+  const mergedPdf = await PDFLib.PDFDocument.create();
+  for (let file of files) {
+    const arrayBuffer = await file.arrayBuffer();
+    const pdf = await PDFLib.PDFDocument.load(arrayBuffer);
+    const copiedPages = await mergedPdf.copyPages(pdf, pdf.getPageIndices());
+    copiedPages.forEach((page) => mergedPdf.addPage(page));
+  }
+  const mergedBytes = await mergedPdf.save();
+  download(mergedBytes, 'merged.pdf');
+}
+
+async function splitPDF() {
+  const file = document.getElementById('splitFile').files[0];
+  const range = document.getElementById('pageRange').value;
+  if (!file || !range) return alert('Select a PDF and enter a page range');
+  const arrayBuffer = await file.arrayBuffer();
+  const pdf = await PDFLib.PDFDocument.load(arrayBuffer);
+  const newPdf = await PDFLib.PDFDocument.create();
+  let [start, end] = range.split('-').map(n => parseInt(n) - 1);
+  if (isNaN(start) || isNaN(end)) return alert('Invalid page range format');
+  const copiedPages = await newPdf.copyPages(pdf, Array.from({length: end - start + 1}, (_, i) => start + i));
+  copiedPages.forEach((page) => newPdf.addPage(page));
+  const splitBytes = await newPdf.save();
+  download(splitBytes, 'split.pdf');
+}
+
+async function compressPDF() {
+  const file = document.getElementById('compressFile').files[0];
+  if (!file) return alert('Select a PDF to compress');
+  // For MVP: Just re-save the PDF (light compression)
+  // Full compression would require image re-encoding libraries (more CPU-heavy)
+  const arrayBuffer = await file.arrayBuffer();
+  const pdf = await PDFLib.PDFDocument.load(arrayBuffer);
+  const compressedBytes = await pdf.save({ useObjectStreams: true });
+  download(compressedBytes, 'compressed.pdf');
+}
+
+async function pdfToImages() {
+  const file = document.getElementById('pdfToImgFile').files[0];
+  if (!file) return alert('Select a PDF');
+  const fileReader = new FileReader();
+  fileReader.onload = async function() {
+    const typedarray = new Uint8Array(this.result);
+    const loadingTask = pdfjsLib.getDocument(typedarray);
+    const pdf = await loadingTask.promise;
+    for (let i = 1; i <= pdf.numPages; i++) {
+      const page = await pdf.getPage(i);
+      const viewport = page.getViewport({ scale: 2.0 });
+      const canvas = document.createElement('canvas');
+      const context = canvas.getContext('2d');
+      canvas.height = viewport.height;
+      canvas.width = viewport.width;
+      await page.render({ canvasContext: context, viewport: viewport }).promise;
+      canvas.toBlob(function(blob) {
+        const url = URL.createObjectURL(blob);
+        const a = document.createElement('a');
+        a.href = url;
+        a.download = `page-${i}.jpg`;
+        document.body.appendChild(a);
+        a.click();
+        URL.revokeObjectURL(url);
+        a.remove();
+      }, 'image/jpeg');
+    }
+  };
+  fileReader.readAsArrayBuffer(file);
+}
 </script>
 
 </body>
 </html>
+
