--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     </section>
 
     <footer>
-      <div class="tiny">Made with ❤️ — files stay in your browser. · <a href="privacy.html">Privacy</a></div>
+      <div class="tiny">Files stay in your browser. · <a href="privacy.html">Privacy</a></div>
     </footer>
   </div>
 
