--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ ul.files li{display:flex;align-items:center;justify-content:space-between;gap:10
         <input type="text" id="pageRange" placeholder="e.g., 1-3" />
         <div class="actions">
           <button class="btn" id="splitBtn">Split & Download</button>
+          <button class="btn secondary" id="splitAllBtn">Split into Single Pages (ZIP)</button>
           <button class="btn secondary" id="splitClear">Clear</button>
         </div>
       </div>
@@ -273,6 +274,8 @@ window.addEventListener('DOMContentLoaded', () => {
   splitPick.onclick=()=>splitInput.click();
   hookDrop(splitDrop, splitInput, files=>{ splitInput.files=files; listFiles(splitList, files); });
   $('#splitClear').onclick=()=>{ splitInput.value=''; splitList.innerHTML=''; $('#pageRange').value=''; };
+
+  // Existing range split
   $('#splitBtn').onclick=async ()=>{
     const file=splitInput.files?.[0]; const range=$('#pageRange').value.trim();
     if(!file) return toast('Choose a PDF.');
@@ -294,8 +297,37 @@ window.addEventListener('DOMContentLoaded', () => {
     finally{ setBusy(btn,false); setProgress(prog,null); }
   };
 
+  // NEW: Split to single pages (ZIP)
+  $('#splitAllBtn').onclick=async ()=>{
+    const file=splitInput.files?.[0]; if(!file) return toast('Choose a PDF.');
+    const btn=$('#splitAllBtn'); setBusy(btn,true,'Creating ZIP…'); const prog=$('#splitProg'); setProgress(prog,5);
+    try{
+      const ab=await file.arrayBuffer();
+      const src=await PDFLib.PDFDocument.load(ab,{updateMetadata:false});
+      const pageCount=src.getPageCount();
+      const zip=new JSZip();
+      const base=(file.name||'document').replace(/\.pdf$/i,'') || 'document';
+
+      for(let i=0;i<pageCount;i++){
+        const out=await PDFLib.PDFDocument.create();
+        const [copied]=await out.copyPages(src,[i]);
+        out.addPage(copied);
+        out.setTitle(`${base} - p${i+1}`,{showInWindowTitleBar:false});
+        const bytes=await out.save();
+        zip.file(`${base}_p${i+1}.pdf`, bytes);
+        setProgress(prog, Math.max(6, Math.round(((i+1)/pageCount)*95)));
+      }
+
+      const zipBlob=await zip.generateAsync({type:'blob',compression:'DEFLATE',compressionOptions:{level:6}});
+      const a=Object.assign(document.createElement('a'),{href:URL.createObjectURL(zipBlob),download:`${base}_pages.zip`});
+      document.body.appendChild(a); a.click(); URL.revokeObjectURL(a.href); a.remove();
+      toast('Single-page PDFs zipped & downloaded.');
+    }catch(e){ console.error(e); toast('Split-to-pages failed.'); }
+    finally{ setBusy(btn,false); setProgress(prog,null); }
+  };
+
   /* ===== COMPRESS ===== */
-  const compressDrop=$('#compressDrop'), compressPick=$('#compressPick'), compressInput=$('#compressFile'), compressList=$('#compressList');
+  const compressDrop=$('#compressDrop'), compressPick=$('#compressPick'), compressInput=$('#compressFile'), compressList=$('#compressList']);
   compressPick.onclick=()=>compressInput.click();
   hookDrop(compressDrop, compressInput, files=>{ compressInput.files=files; listFiles(compressList, files); });
   $('#compressClear').onclick=()=>{ compressInput.value=''; compressList.innerHTML=''; };
@@ -305,7 +337,6 @@ window.addEventListener('DOMContentLoaded', () => {
     try{
       const ab=await file.arrayBuffer();
       const pdf=await PDFLib.PDFDocument.load(ab);
-      // Light lossless-ish recompress (object streams)
       const bytes=await pdf.save({useObjectStreams:true});
       const blob=new Blob([bytes],{type:'application/pdf'});
       const a=Object.assign(document.createElement('a'),{href:URL.createObjectURL(blob),download:`compressed-${file.name.replace(/\s+/g,'_')}`});
